--- a/src/Utilities/Variables.scss
+++ b/src/Utilities/Variables.scss
@@ -39,7 +39,7 @@ $light-mulberry : #E1B1EF;
 $light-yellow   : #FFF8DC;
 $light-green    : #33cc33;
 
-$dark-blue      : #3b5998;
+$dark-blue      : #080A52;
 $dark-purple    : #070930;
 $dark-grey      : #888888;
 $sea-green      : #20B2AA;
